# netatalk

./: .gitignore  configure.ac  meson.build  meson.build2  meson_options.txt
config/: meson.build
etc/afpd/: meson.build
etc/atalkd/: main.c
etc/cnid_dbd/: meson.build
etc/uams/: meson.build
include/atalk/: meson.build
libatalk/: meson.build
libatalk/acl/: meson.build
libatalk/adouble/: meson.build
libatalk/cnid/: meson.build
libatalk/cnid/dbd/: meson.build
libatalk/compat/: meson.build
libatalk/unicode/: meson.build
libatalk/unicode/charsets/: meson.build
libatalk/util/: meson.build
macros/: netatalk.m4
test/afpd/: meson.build
